@@ -4,6 +4,8 @@ Version 1.0.0 Release Candidate 2 - CVS
 ---------------------------------------
  - Add TOO-LATE result to team manual.
  - Fix case-bug in sql/mysql_privileges.sql example.
+ - Drop checking for existence of testdata in www/jury/checkconfig.php,
+   since the webserver doesn't need to be able to read that data.
 
 Version 1.0.0 Release Candidate 1 - 21 September 2005
 -----------------------------------------------------
